# bazel-python-omitted-coverage

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  requirements_lock.txt
src/: has_tests.py  no_tests.py
tests/: test.py
