load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_library(
    name = "lib",
    srcs = glob(["src/**/*.py"]),
)

py_test(
    name = "test",
    srcs = ["tests/test.py"],
    deps = [":lib"],
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
    requirements_windows = "requirements_windows.txt",
)
