bazel_dep(name = "rules_python", version = "1.1.0")
local_path_override(
    module_name = "rules_python",
    path = "../..",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.9.13",
    configure_coverage_tool = True,
)
use_repo(
    python,
    python_3_9 = "python_3_9_13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    download_only = True,
    hub_name = "pypi",
    python_version = "3.9.13",
    requirements_lock = ":requirements_lock.txt",
    requirements_windows = ":requirements_windows.txt",
)
use_repo(pip, "pypi")
